--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
+    "@mui/x-charts": "^8.15.0",
     "@mui/x-date-pickers": "^8.14.1",
     "@reduxjs/toolkit": "^2.9.1",
     "dayjs": "^1.11.18",
